# elastic-collisions

./: CMakeLists.txt  LICENSE  README.md
include/: elastic_collisions.hpp
src/: main.cpp  particle.cpp
